# Stock_Predictor

./: .env.example  .gitignore  DOCUMENTATION.md  Makefile  README.md  TODO.md  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  server.ts  tsconfig.build.json  tsconfig.json  vite.config.ts
configs/: data.yaml  model.yaml
data/datasets/: .gitkeep
notebooks/: .gitkeep
src/: __init__.py  main.tsx
src/api/: __init__.py  main.py
src/api/services/: stock_service.ts
src/api/types/: market_types.ts
src/core/config/: constants.ts
src/data/: __init__.py  data_loader.py
src/evaluation/: __init__.py  evaluate_model.py
src/features/: __init__.py  build_features.py  technical_indicators.py
src/ml/signals/: technical_analysis.ts
src/prediction/: __init__.py  predict.py
src/training/: __init__.py  train_model.py
src/ui/: app.tsx
src/ui/components/: DashboardHeader.tsx  MetricCards.tsx  charts.tsx  error_boundary.tsx  forecast_chart.tsx  gauges.tsx  sidebar.tsx  ticker.tsx
src/ui/hooks/: useAnalysis.ts  useMarketData.ts
src/utils/: __init__.py  config_loader.py  logger.py
src/visualization/: __init__.py  plot_forecasts.py
web/: index.html  package.json
